[package]
name = "absdepfile"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Seth Junot"]
license = "GPL-3.0-only"
description = "Simple tool to resolve and writeback depfile paths"
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
debug = false
lto = true
panic = "abort"
opt-level = "z"
